# action-pact

./: Cargo.toml  README.md
.github/workflows/: main.yml
data/: action.json  workflow.json
src/: error.rs  main.rs
tests/data/: valid_01.yml
tests/data/actions/valid/: action.yml
tests/data/workflows/: invalid_01.yml  valid_01.yml
