[package]
name = "action-pact"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
jsonschema-valid = "0.2"
structopt = "0.3"
